[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

3.2.7

  - Remove disable_triggers and disable_rules from the sync table. 
    We simply choose pg_class or replica based on the version of the 
    database in question. [GSM]

  - Allow wildcards in the 'bucardo_ctl kick' [Josh Tolley]

  - Support multi-column primary keys. Thanks to Backcountry.com. [GSM]

  - Rewrite the pushdelta sync method to be more efficient and safer. [GSM]

  - Fix failure to disable/enable triggers when using pg_class and table 
    and schema are words changed by quote_ident. [Ben Allen]

  - Allow for dead columns when checking attnums. [GSM]

  - Add 'bucardo_ctl upgrade' to make intra-version upgrades easy 
    and automatic. [Selena Deckelmann and GSM]

  - Tolerate incompatibility in DEFAULT of negative numbers between 
    Postgres 8.2 and 8.3. [Jon Jensen]

  - Add log_conflict_details to allow logging of conflict information 
    to a separate file. [Adam Wendt]

  - Make the audit_pid table more useful. Use sequences instead of 
    PIDs to find children. Allow for the audit_pid table to be toggled off. [GSM]

  - Add validate_all_syncs() function, and allow an argument to both that 
    and validate_sync() to force recreation of supporting objects. [GSM]

  - Have master_q use a trigger, not multiple rules. Remove the need 
    for a separate create_child_q() function. [GSM]

  - Add in bucardo_compress_delta function, to remove duplicate rows from 
    the bucardo_delta table. [GSM]

  - Do better checking of bucardo_ctl executable when MCP is restarting. [Ben Allen]

  - Allow the injection of custom messages into the Bucardo logs, and make 
    an interface for same in bucardo_ctl. [GSM]

  - Add the bucardo_rate table to track exactly how long replication takes
    on a per-sync and per-table basis. [GSM]

  - Add "sendmail" option to the customcode input. [Ben Allen]

  - Change timestamp to timestamptz where needed inside Bucardo.pm [Yan Farmawan]
