@@ -13,7 +13,6 @@ requires:
   DBI               : 1.51
   DBD::Pg           : 2.0
   DBIx::Safe        : 1.2.4
-  Moose             : 0.18
   IO::Handle        : 1.24
   Sys::Hostname     : 1.11
   Sys::Syslog       : 0.13
